@@ -1,7 +1,7 @@
 
 
 KNOWN ISSUES:
-* update translations
+* Update translations
 
 
 KNOWN ENHANCEMENT REQUESTS:
@@ -17,13 +17,11 @@ KNOWN ENHANCEMENT REQUESTS Postponed to 5.1 or later:
 * Custimizable formats selector w/ classes (needs support for classes in TinyMCE FormatBlock call)
   See: issue #008781
 
-* Better feedback on custom attribute validation ( fork TinyMCE validation and enhance it? )
-
 * Improve support for flash and video (look into using the media pugin in TinyMCE)
 
 * Improve Browse view (also used in search and bookmarks), look at MCFileMangager & MCImageManager
  plugins demo for tinymce (on their website) for alternative approach.
  
-* support custom attributes in embed tag preview (in dialog)
+* Support custom attributes in embed tag preview (in dialog)
 
 * Better support for using editor outside of content/edit, where you don't know the object_id yet.
